[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "stustapay"
version = "0.1.0"
license = { file = "LICENSE" }
maintainers = [
    { name = "Michael Loipführer", email = "milo@sft.lol" },
]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.103.2",
    "typer==0.9.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.22.0",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",
    "asyncpg==0.29.0",
    "PyYAML==6.0.1",
    "python-jose[cryptography]==3.3.0",
    "Jinja2==3.1.2",
    "aiohttp==3.9.5",
    "pylatexenc==2.10",
    "schwifty==2023.6.0",
    "sepaxml==2.6.1",
    "asn1crypto==1.5.1",
    "ecdsa==0.18.0",
    "dateutils==0.6.12",
    "pydantic[email]==2.4",
    "aiosmtplib==3.0.1",
]

[project.scripts]
stustapay = "stustapay.cli.main:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
dev = [
    "black==24.4.2",
    "isort==5.13.2",
    "mypy==1.4.1",
    "pylint==3.0.3",
    "types-PyYAML",
    "types-python-dateutil",
    "types-pytz",
    "bump-my-version~=0.15",
]

[project.urls]
Website = "https://stustapay.de"
Docs = "https://stustapay.de/docs"
Source = "https://github.com/stustapay/stustapay"

[tool.setuptools.packages.find]
namespaces = false
exclude = ["stustapay.tests*", "tests*"]

[tool.pylint]
extension-pkg-whitelist = [
    "pydantic"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C",
    "R",
    "fixme",
    "logging-fstring-interpolation",
    "unspecified-encoding",
    "broad-exception-raised",
    "broad-exception-caught"
]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
pretty = true
plugins = [
    "pydantic.mypy"
]

[tool.coverage.run]
source = [
    "stustapay"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
testpaths = [
    "stustapay.tests",
]

[tool.bumpversion]
current_version = "0.1.0"
commit = false
files = [
    { filename = "pyproject.toml" },
    { filename = "stustapay/__init__.py" },
    { filename = "CHANGELOG.md", search = "Unreleased", replace = "{new_version} ({now:%Y-%m-%d})" },
    { filename = "CHANGELOG.md", search = "v{current_version}...HEAD", replace = "v{current_version}...v{new_version}" },
]
