[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "stustapay"
version = "0.2.1"
license = { file = "LICENSE" }
maintainers = [{ name = "Michael Loipführer", email = "milo@sft.lol" }]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
]
requires-python = ">=3.11"
dependencies = [
    "sftkit==0.3.3",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",
    "PyYAML==6.0.1",
    "python-jose[cryptography]==3.3.0",
    "aiohttp==3.9.5",
    "schwifty==2023.6.0",
    "sepaxml==2.6.1",
    "asn1crypto==1.5.1",
    "ecdsa==0.18.0",
    "dateutils==0.6.12",
    "aiosmtplib==3.0.1",
    "weasyprint==65.0",
    "mako==1.3.9",
    "pandas==2.2.3",
    "websockets~=15.0.1",
]

[project.scripts]
stustapay = "stustapay.cli.main:main"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff==0.9.9",
    "black==25.1.0",
    "isort==5.13.2",
    "mypy==1.4.1",
    "pylint==3.0.3",
    "types-PyYAML",
    "types-python-dateutil",
    "types-pytz",
    "bump-my-version>=1.2.4",
    "websockets~=15.0.1",
    { include-group = "test" },
]
test = ["pytest==8.4.0", "pytest-asyncio==1.0.0", "pytest-cov==6.1.1"]

[project.urls]
Website = "https://stustapay.de"
Docs = "https://stustapay.de/docs"
Source = "https://github.com/stustapay/stustapay"

[tool.setuptools.packages.find]
namespaces = false
exclude = ["stustapay.tests*", "tests*"]

[tool.sftkit]
db_code_dir = "stustapay/core/schema/db_code"
db_migrations_dir = "stustapay/core/schema/db"

target_debian_distros = ["debian:bookworm", "debian:trixie"]

[tool.pylint]
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C",
    "R",
    "fixme",
    "logging-fstring-interpolation",
    "unspecified-encoding",
    "broad-exception-raised",
    "broad-exception-caught",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".idea", ".mypy_cache", ".venv*", "docs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "PLE", "PLW"]
ignore = ["E722"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["stustapay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
testpaths = ["stustapay.tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.bumpversion]
current_version = "0.2.1"
commit = false
files = [
    { filename = "pyproject.toml" },
    { filename = "stustapay/__init__.py" },
    { filename = "CHANGELOG.md", search = "Unreleased", replace = "{new_version} ({now:%Y-%m-%d})" },
    { filename = "CHANGELOG.md", search = "v{current_version}...HEAD", replace = "v{current_version}...v{new_version}" },
]
