[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "stustapay"
version = "2026.2.1"
license = { file = "LICENSE" }
maintainers = [{ name = "Michael Loipführer", email = "milo@sft.lol" }]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
]
requires-python = ">=3.11"
dependencies = [
    "sftkit==0.4.2",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",
    "PyYAML==6.0.3",
    "python-jose[cryptography]==3.5.0",
    "aiohttp==3.13.3",
    "schwifty==2026.1.0",
    "sepaxml==2.7.0",
    "asn1crypto==1.5.1",
    "ecdsa==0.19.1",
    "dateutils==0.6.12",
    "aiosmtplib==5.1.0",
    "weasyprint==68.1",
    "mako==1.3.10",
    "pandas==2.2.3",
    "websockets~=15.0.1",
]

[project.scripts]
stustapay = "stustapay.cli.main:main"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "pylint",
    "types-PyYAML",
    "types-python-dateutil",
    "types-pytz",
    "bump-my-version",
    { include-group = "test" },
]
test = ["pytest==8.4.0", "pytest-asyncio==1.0.0", "pytest-cov==6.1.1"]

[project.urls]
Website = "https://stustapay.de"
Docs = "https://stustapay.de/docs"
Source = "https://github.com/stustapay/stustapay"

[tool.setuptools.packages.find]
namespaces = false
exclude = ["stustapay.tests*", "tests*"]

[tool.sftkit]
db_code_dir = "stustapay/core/schema/db_code"
db_migrations_dir = "stustapay/core/schema/db"

target_debian_distros = ["debian:bookworm", "debian:trixie"]

[tool.pylint]
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C",
    "R",
    "fixme",
    "logging-fstring-interpolation",
    "unspecified-encoding",
    "broad-exception-raised",
    "broad-exception-caught",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".idea", ".mypy_cache", ".venv*", "docs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "PLE", "PLW"]
ignore = ["E722"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["stustapay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
testpaths = ["stustapay.tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.bumpversion]
current_version = "2026.2.1"
parse = """(?x)                     # Verbose mode
    (?P<release>                    # The release part
        (?:[1-9][0-9]{3})\\.        # YYYY.
        (?:1[0-2]|[1-9])            # MM.
    )
    (?:\\.(?P<patch>\\d+))          # .patch, optional
"""
serialize = ["{release}.{patch}"]
commit = false
files = [
    { filename = "pyproject.toml" },
    { filename = "stustapay/__init__.py" },
    { filename = "CHANGELOG.md", search = "Unreleased", replace = "{new_version} ({now:%Y-%m-%d})" },
    { filename = "CHANGELOG.md", search = "v{current_version}...HEAD", replace = "v{current_version}...v{new_version}" },
]

[tool.bumpversion.parts.release]
calver_format = "{YYYY}.{MM}"
